--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.15",
     "@mui/x-date-pickers": "5.0.9",
+    "@reduxjs/toolkit": "^2.5.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.2.0",
     "change-case": "^4.1.2",
@@ -35,12 +36,14 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "14.2.3",
     "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.39.5",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^12.0.0",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-redux": "^9.2.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.0",
+    "redux-persist": "^6.0.0",
     "simplebar": "^5.3.9",
     "simplebar-react": "^2.4.3",
     "stylis": "^4.1.3",
