--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@hookform/resolvers": "^2.9.10",
     "@iconify/react": "^4.0.0",
     "@mui/lab": "^5.0.0-alpha.109",
     "@mui/material": "^5.10.15",
     "@mui/x-date-pickers": "5.0.9",
     "@reduxjs/toolkit": "^2.5.0",
+    "assert": "^2.1.0",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.2.0",
+    "browser-image-compression": "^2.0.2",
+    "buffer": "^6.0.3",
     "change-case": "^4.1.2",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.4.7",
     "framer-motion": "^7.6.12",
@@ -32,6 +38,8 @@
     "notistack": "^2.0.8",
     "nprogress": "^0.2.0",
     "numeral": "2.0.6",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "14.2.3",
@@ -46,8 +54,11 @@
     "redux-persist": "^6.0.0",
     "simplebar": "^5.3.9",
     "simplebar-react": "^2.4.3",
+    "stream-browserify": "^3.0.0",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
+    "telegram": "^2.26.16",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "web-vitals": "^3.1.0",
     "yup": "^0.32.11"
   },
