--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crypto-browserify": "^3.12.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.4.7",
+    "firebase": "^11.1.0",
     "framer-motion": "^7.6.12",
     "history": "^5.3.0",
     "i18next": "^22.0.6",
