--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^12.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^9.2.0",
     "react-router": "^6.4.3",
