--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "14.2.3",
+    "react-ga4": "^2.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^12.0.0",
