Update firebase yml file for encrypted build

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,6 +15,13 @@ jobs:
       # Install dependencies and build the project
       - name: Install dependencies and build
         run: yarn install && yarn run build
+
+	  - name: Install JavaScript Obfuscator
+        run: npm install -g javascript-obfuscator
+
+	  - name: Obfuscate JS files
+        run: javascript-obfuscator dist/assets --output dist/assets
+
         env:
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
