--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
+	"build:encrypt": "tsc -b && vite build && javascript-obfuscator dist/assets --output dist/assets --compact true",
     "lint": "eslint . --fix",
     "preview": "vite preview --host"
   },
