Add image preview

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "React Material Minimal UI",
-  "short_name": "Minimal-UI",
+  "name": "Tele Cloud",
+  "short_name": "telecloud",
   "display": "standalone",
   "start_url": "/",
   "theme_color": "#000000",
