--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tele Cloud",
+  "name": "Tele Manager",
   "short_name": "telecloud",
   "display": "standalone",
   "start_url": "/",
