--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,16 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+	"headers": [
+      {
+        "source": "**/*.js",
+        "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+      },
+      {
+        "source": "**/*.css",
+        "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+      }
     ]
   }
 }
