--- a/firebase.json
+++ b/firebase.json
@@ -1,26 +1,31 @@
 {
-  "hosting": {
-    "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ],
-	"headers": [
-      {
-        "source": "**/*.js",
-        "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
-      },
-      {
-        "source": "**/*.css",
-        "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
-      }
-    ]
-  }
+	"hosting": {
+		"public": "dist",
+		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+		"rewrites": [
+			{
+				"source": "**",
+				"destination": "/index.html"
+			}
+		],
+		"headers": [
+			{
+				"source": "**/*.js",
+				"headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+			},
+			{
+				"source": "**/*.css",
+				"headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+			},
+			{
+				"source": "/sitemap.xml",
+				"headers": [
+				  {
+					"key": "Cache-Control",
+					"value": "public, max-age=0, must-revalidate"
+				  }
+				]
+			  }
+		]
+	}
 }
