--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
-	"build:enc": "tsc -b && vite build && javascript-obfuscator dist/assets --output dist/assets --compact true",
+	"build:enc": "tsc -b && vite build && javascript-obfuscator dist/assets --output dist/assets --compact true && javascript-obfuscator dist/assets --output dist/assets",
     "lint": "eslint . --fix",
     "preview": "vite preview --host"
   },
